--- a/MyWebProject/WebContent/META-INF/log4j.properties
+++ b/MyWebProject/WebContent/META-INF/log4j.properties
@@ -14,3 +14,6 @@ log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# See https://issues.apache.org/jira/browse/AXIS-2296
+log4j.logger.org.apache.axis.encoding.ser=info
